backend/.clippy-baseline.txt

               found reference `&sea_orm::DatabaseTransaction`
             found struct `std::string::String`
    = note: expected enum `std::option::Option<std::string::String>`
    = note: expected reference `&sea_orm::DatabaseConnection`
    |
    |                                                                  ------ `existing` moved due to this method call
    |                                                                 ++++++++
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^ value used here after move
    |                                        +++++                          +
    |                                        this argument influences the type of `Set`
    |                                        |
    |                                     ----------------- ^^^^ expected `&DatabaseConnection`, found `&DatabaseTransaction`
    |                                     arguments to this method are incorrect
    |                                     |
    |                                    --- ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<String>`, found `String`
    |                                    ^^^^--------------------------^
    |                                    arguments to this enum variant are incorrect
    |                                    |
    |                     -------- move occurs because `existing` has type `models::failover_status::Model`, which does not implement the `Copy` trait
    |                    ^^^^^^^^^^^ missing `data_scope` and `department_id`
    |              ^^^^^^^^^^^^^^^^^        -----------------------
    |         ^^^^^^^^^^^^^^^^^^^^^^ missing `color_no`, `dye_lot_no` and `grade`
    |     ^^^
   --> /home/runner/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sea-orm-1.1.20/src/entity/active_model.rs:45:5
   --> /rustc/e408947bfd200af42db322daf0fadfe7e26d3bd1/library/core/src/convert/mod.rs:455:12
   --> src/handlers/init_handler.rs:564:20
   --> src/services/ai/quality_pred.rs:507:9
   --> src/services/failover_service.rs:436:41
   --> src/services/material_shortage_service.rs:419:55
   --> src/services/material_shortage_service.rs:424:36
   --> src/services/material_shortage_service.rs:424:40
   --> src/services/material_shortage_service.rs:453:14
 45 |     Set(V),
...
419 |                 let alert_no = self.generate_alert_no(&txn).await?;
424 |                     material_code: Set(Some(item.material_code.clone())),
424 |                     material_code: Set(item.material_code.clone()),
431 |         if let Some(existing) = existing {
432 |             let mut active: status_model::ActiveModel = existing.clone().into();
432 |             let mut active: status_model::ActiveModel = existing.into();
436 |             active.total_switches = Set(existing.total_switches + 1); // 累加切换次数
453 |     async fn generate_alert_no(&self, db: &DatabaseConnection) -> Result<String, AppError> {
507 |         QualityInspectionModel {
564 |         let auth = AuthContext {
error[E0063]: missing fields `color_no`, `dye_lot_no` and `grade` in initializer of `models::quality_inspection_record::Model`
error[E0063]: missing fields `data_scope` and `department_id` in initializer of `middleware::auth_context::AuthContext`
error[E0308]: mismatched types
error[E0382]: use of moved value: `existing`
help: the type constructed contains `std::string::String` due to the type of the argument passed
help: try wrapping the expression in `Some`
help: you can `clone` the value and consume it, but this might not be your desired behavior
note: `std::convert::Into::into` takes ownership of the receiver `self`, which moves `existing`
note: method defined here
note: tuple variant defined here
